# hsrdl

./: .gitignore  Check.hs  Como.hs  Elab.hs  Hsrdl.hs  LICENSE  ParseStack.hs  Parser.hs  Props.hs  README.md  SourcePos.hs  SparseArray.hs  SymbolTable.hs  TODO  TestStrings.hs  hsrdl.cabal  regs.css  stack.yaml
app/: Main.hs
src/: Elab.hs  Elab2.hs  Parser.hs  Props.hs  SparseArray.hs  SymbolTable.hs  SymbolTable2.hs  TODO  Types.hs
src/Backends/: AST.hs  UVM.hs  Verilog.hs
src/Backends/Verilog/: AST.hs  Verilog.hs
src/Language/: SRDL.hs
src/Language/SRDL/: Elab2.hs  Parser.hs  Props.hs  SpanLexer.hs  Stream.hs  StreamParser.hs  SymbolTable.hs  Types.hs
src/Language/SRDL/Backends/: Html.hs  UVM.hs  Verilog.hs
test/srdl/: basic.srdl  counter_overflow.srdl  include.srdl  include2.srdl  intr.srdl  user_prop.srdl
tests/: user_prop.srdl
verilog/: field.sv
