name:                hsrdl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bdmagnuson/hsrdl#readme
license:             BSD2
license-file:        LICENSE
author:              Brian Magnuson
maintainer:          bdmagnuson@gmail.com
copyright:           (C) 2107
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.SRDL.Elab2
                     , Language.SRDL.Parser
                     , Language.SRDL.StreamParser
                     , Language.SRDL.Props
                     , Language.SRDL.SymbolTable
                     , Language.SRDL.Types
                     , Language.SRDL.Backends.UVM
                     , Language.SRDL.Backends.Verilog
                     , Language.SRDL
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , megaparsec
                     , free
                     , comonad
                     , transformers
                     , mtl
                     , recursion-schemes
                     , lens
                     , deriving-compat
                     , prettyprinter
                     , text
                     , shakespeare
                     , heterocephalus
                     , blaze-markup
  default-language:    Haskell2010

executable hsrdl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , hsrdl
                     , megaparsec
                     , text
                     , containers
                     , mtl
                     , optparse-applicative
  default-language:    Haskell2010

test-suite hsrdl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsrdl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bdmagnuson/hsrdl
